# WirVsVirusDunkelzifferRadar

./: .gitignore  README.md  docker-compose.yml  external_data.py  requirements.txt
Fragebogen/: Fragensammlung.md  SNOMED.md
backend/: Dockerfile  QUICKSTART.md  app.py  app.yml  docker-entrypoint.sh  gunicorn_config.py  pyproject.toml
backend/backend/: app.py  app.yaml  app.yml  db_connector.py  routes.py  snomed.py
backend/backend/api/: routes.py
fragebogen/: Fragensammlung.md  generate_testdata.py  namelist.py
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/api/: api.module.ts
frontend/src/app/: app.component.html  app.module.ts
frontend/src/assets/: 0.geo.json  01.geo.json  02.geo.json  03.geo.json  04.geo.json  05.geo.json  06.geo.json  07.geo.json  08.geo.json  09.geo.json  1.geo.json  10.geo.json  11.geo.json  12.geo.json  13.geo.json  14.geo.json  15.geo.json  16.geo.json  17.geo.json  18.geo.json  19.geo.json  2.geo.json  20.geo.json  21.geo.json  22.geo.json  23.geo.json  24.geo.json  25.geo.json  26.geo.json  27.geo.json  28.geo.json  29.geo.json  3.geo.json  30.geo.json  31.geo.json  32.geo.json  33.geo.json  34.geo.json  35.geo.json  36.geo.json  (+82 more)
worker/: .gitignore  README.md  analysis.py  external_data.py  landkreisAggregate.py
worker/database/: .gitignore  analysis.py  connection.py  data.csv  db_connector.py
worker/nbs/: expModel_Germany.ipynb  expModel_Italy.ipynb  logisticFkt.ipynb
worker/nbs/.ipynb_checkpoints/: expModel_Germany-checkpoint.ipynb
(+443 files in other folders)
