[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
connexion = "^2.6.0"
python-dotenv = "^0.12.0"
gevent = "^1.4.0"
flask_cors = "^3.0.8"
psycopg2 = "^2.8.4"
pandas = "^1.0.3"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
